[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/heart1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Graphics/HUD/hud_coins.png" type="Texture" id=3]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer" groups=["GUI"]]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HeartsContainer" type="HBoxContainer" parent="Control"]
margin_left = 40.0
margin_top = 26.0
margin_right = 242.0
margin_bottom = 71.0

[node name="heart1" parent="Control/HeartsContainer" instance=ExtResource( 2 )]

[node name="HeartsContainer2" type="HBoxContainer" parent="Control"]
margin_left = 802.0
margin_top = 33.0
margin_right = 979.0
margin_bottom = 78.0

[node name="heart1" type="TextureRect" parent="Control/HeartsContainer2"]
margin_right = 47.0
margin_bottom = 49.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Control/HeartsContainer2"]
margin_left = 51.0
margin_right = 81.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "0"
